<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.app.MainActivity" >



    <Button
        android:id="@+id/buttonNotice"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_x="10dp"
        android:layout_y="153dp"
        android:text="@string/buttonNotice" />

    <Button
        android:id="@+id/buttonPersonalSetting"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_x="10dp"
        android:layout_y="260dp"
        android:text="@string/buttonPersonalSetting" />

    <Button
        android:id="@+id/buttonQnA"
        android:layout_width="132dp"
        android:layout_height="113dp"
        android:layout_x="136dp"
        android:layout_y="260dp"
        android:text="@string/buttonQnA" />

    <ImageButton
        android:id="@+id/buttonReservation"
        android:layout_width="156dp"
        android:layout_height="171dp"
        android:layout_x="142dp"
        android:layout_y="90dp"
        android:maxHeight="100dp"
        android:maxWidth="100dp"
        android:padding="0sp"
        android:scaleType="centerCrop"
        android:src="@drawable/washing" />

    <ImageButton
        android:id="@+id/buttonLogin"
        android:layout_width="56dp"
        android:layout_height="23dp"
        android:layout_x="232dp"
        android:layout_y="0dp"
        android:padding="0sp"
        android:scaleType="centerCrop"
        android:src="@drawable/login" />

    <ImageButton
        android:id="@+id/buttonSetting"
        android:layout_width="32dp"
        android:layout_height="35dp"
        android:layout_x="240dp"
        android:layout_y="380dp"
        android:padding="0sp"
        android:scaleType="centerCrop"
        android:src="@drawable/setting" />

    <ImageButton
        android:id="@+id/buttonReservationBuble"
        android:layout_width="133dp"
        android:layout_height="86dp"
        android:layout_x="30dp"
        android:layout_y="40dp"
        android:src="@drawable/reservation" />

</AbsoluteLayout>